complete gradle plugin

--- a/plugin-build/gradle.properties
+++ b/plugin-build/gradle.properties
@@ -1,8 +1,8 @@
-ID=com.ncorti.kotlin.gradle.template.plugin
-VERSION=1.0.0
-GROUP=com.ncorti.kotlin.gradle.template
-DISPLAY_NAME=An empty Gradle Plugin from a template
-DESCRIPTION=An empty Gradle plugin created from a template
-WEBSITE=https://github.com/cortinico/kotlin-gradle-plugin-template
-VCS_URL=https://github.com/cortinico/kotlin-gradle-plugin-template
-IMPLEMENTATION_CLASS=com.ncorti.kotlin.gradle.template.plugin.TemplatePlugin
+ID=io.github.dead8309.tailwind-kt
+VERSION=0.0.1
+GROUP=io.github.dead8309
+DISPLAY_NAME=Setup Tailwind configuration plugin
+DESCRIPTION=A plugin which configures tailwindcss to be used in a KotlinJs project
+WEBSITE=https://github.com/dead8309/tailwind-plugin
+VCS_URL=https://github.com/dead8309/tailwind-plugin
+IMPLEMENTATION_CLASS=kizzy.tailwind.TailwindPlugin
