--- a/examples/kobweb/.kobweb/conf.yaml
+++ b/examples/kobweb/.kobweb/conf.yaml
@@ -1,14 +1,14 @@
 site:
-  title: "Tailwind Plugin"
+  title: "Tailwind Plugin Demo"
 
 server:
   files:
     dev:
       contentRoot: "build/processedResources/js/main/public"
-      script: "build/developmentExecutable/tailwindktplugin.js"
-      api: "build/libs/tailwindktplugin.jar"
+      script: "build/developmentExecutable/examples-kobweb.js"
+      api: "build/libs/examples-kobweb.jar"
     prod:
-      script: "build/distributions/tailwindktplugin.js"
+      script: "build/distributions/examples-kobweb.js"
       siteRoot: ".kobweb/site"
 
   port: 8080
