rename plugin module

--- a/plugin-build/gradle.properties
+++ b/plugin-build/gradle.properties
@@ -1,5 +1,5 @@
 ID=io.github.dead8309.tailwind-kt
-VERSION=0.0.1
+VERSION=0.0.1-SNAPSHOT
 GROUP=io.github.dead8309
 DISPLAY_NAME=Setup Tailwind configuration plugin
 DESCRIPTION=A plugin which configures tailwindcss to be used in a KotlinJs project
